Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignTextObjBooleanWrapped.quorum
class main
    action Main
        Text t = true
    end
end